Fixed a font issue and now have initial navbar close on mobile

--- a/src/components/About/About.module.css
+++ b/src/components/About/About.module.css
@@ -77,7 +77,7 @@
 
 .aboutItemDesc {
   font-size: 20px;
-  font-family: var(--font-noto);
+  font-family: var(--font-noto-sans-jp);
 }
 
 @media screen and (max-width: 830px) {
