--- a/src/components/Experience/ExpCard.module.css
+++ b/src/components/Experience/ExpCard.module.css
@@ -30,7 +30,7 @@
 .content {
   font-size: 25px;
   font-weight: 400;
-  font-family: var(--font-noto);
+  font-family: var(--font-noto-sans-jp);
   min-height: 125px;
 }
 
