--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -42,7 +42,7 @@
 .description {
   display: flex;
   font-size: 20px;
-  font-family: var(--font-noto);
+  font-family: var(--font-noto-sans-jp);
   background: linear-gradient(
     90deg,
     rgba(255, 255, 255, 1) 0%,
