--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -40,7 +40,7 @@
   padding-top: 10px;
   padding-bottom: 10px;
   position: absolute;
-  left: 5px;
+  left: 3px;
 }
 
 .langBtn {
