--- a/src/components/Projects/ProjectCard.module.css
+++ b/src/components/Projects/ProjectCard.module.css
@@ -15,13 +15,13 @@
 }
 
 .title {
-  font-family: var(--font-noto);
+  font-family: var(--font-noto-sans-jp);
   font-size: 25px;
   font-weight: 700;
 }
 
 .description {
-  font-family: var(--font-noto);
+  font-family: var(--font-noto-sans-jp);
   margin-top: 6px;
   font-size: 25px;
   font-weight: 400;
@@ -38,7 +38,7 @@
 }
 
 .skill {
-  font-family: var(--font-noto);
+  font-family: var(--font-noto-sans-jp);
   font-size: 25px;
   font-weight: 400;
   border-radius: 100px;
@@ -54,7 +54,7 @@
 }
 
 .link {
-  font-family: var(--font-noto);
+  font-family: var(--font-noto-sans-jp);
   text-decoration: none;
   color: var(--color-text);
   font-size: 30px;
