--- a/src/vars.css
+++ b/src/vars.css
@@ -23,5 +23,5 @@
 
   /* Fonts */
   --font-roboto: "Roboto";
-  --font-noto: "Noto-sans-jp";
+  --font-noto-sans-jp: "Noto Sans JP";
 }
